# memories

./: Dockerfile  Makefile  alembic.ini  docker-compose.yaml  openapi.yml  pyproject.toml
src/: memories.yml
src/memories/: __main__.py
src/memories/adapters/: director.py
src/memories/adapters/database/: __init__.py  config.py  connection.py  exception_mapper.py  exceptions.py  uow.py
src/memories/adapters/database/converters/: memory.py  permission.py
src/memories/adapters/database/migrations/: env.py
src/memories/adapters/database/models/: __init__.py  base.py  map.py  memory.py  user.py
src/memories/adapters/database/repositories/: base.py  memory.py  permission.py  user.py
src/memories/adapters/identity_provider/: __init__.py  basic.py
src/memories/applications/: __init__.py
src/memories/applications/common/: access_control.py  constants.py  exceptions.py
src/memories/applications/common/interfaces/: __init__.py  identity_provider.py  permission_gateway.py  uow.py
src/memories/applications/common/models/: dto.py
src/memories/applications/memory/: __init__.py  exceptions.py
src/memories/applications/memory/commands/: __init__.py  (+4 more)
src/memories/applications/user/: __init__.py  exceptions.py
src/memories/domain/: __init__.py
src/memories/domain/common/: exceptions.py
src/memories/domain/memory/: exceptions.py
src/memories/presentation/api/: __init__.py  app.py  config.py
tests/fixtures/unit/: memory_fixtures.py
tests/unit/: conftest.py
tests/unit/domain/: test_memories_aggreate.py  test_services.py  test_value_objects.py
(+58 files in other folders)
