[tool.poetry]
name = "memories"
version = "0.1.0"
description = ""
authors = ["poorpen <roma.polovik.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
validators = "^0.22.0"
passlib = "^1.7.4"
email-validator = "^2.1.0.post1"
sqlalchemy = "^2.0.23"




[tool.poetry.group.dev.dependencies]
faker = "^20.1.0"
pytest = "^7.4.3"
black = "^23.11.0"


